--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Zero Barriga</title>
+    <title>SCORE 930</title>
     
     <style type="text/css">
       body {
@@ -59,10 +59,10 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes </b></h3>
+            <h3 class="my-4"><b>Aumente seu score de forma simples com técnicas já validadas </b></h3>
 
             <!-- VSL -->
-            <div id="vid_62b382e91ded160009dbcb37" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62b382e91ded160009dbcb37" src="https://images.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/62b382e91ded160009dbcb37/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62b382e91ded160009dbcb37" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62b382e91ded160009dbcb37">var s=document.createElement("script");s.src="https://scripts.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/62b382e91ded160009dbcb37/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_62d59eb2a3e29b000aea1714" style="position:relative;width:100%;padding: 100% 0 0;"><img id="thumb_62d59eb2a3e29b000aea1714" src="https://images.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/62d59eb2a3e29b000aea1714/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62d59eb2a3e29b000aea1714" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62d59eb2a3e29b000aea1714">var s=document.createElement("script");s.src="https://scripts.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/62d59eb2a3e29b000aea1714/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
@@ -80,7 +80,7 @@
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 1740000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 0); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
