--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/yLmxUVK" class="a-btn" style="text-decoration: none;">
+              <a href="https://app.monetizze.com.br/r/AWU20928376" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
