--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '1439825239764519');
   fbq('track', 'PageView');
+  fbq('track', 'ViewContent');
    </script>
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=1439825239764519&ev=PageView&noscript=1"
