--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '1439825239764519');
   fbq('track', 'PageView');
-  fbq('track', 'ViewContent');
-   </script>
+</script>
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=1439825239764519&ev=PageView&noscript=1"
-  src="https://www.facebook.com/tr?id=1439825239764519&ev=ViewContent&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
@@ -65,7 +63,7 @@
             <h3 class="my-4"><b>Aumente seu score de forma simples com técnicas já validadas </b></h3>
 
             <!-- VSL -->
-            <div id="vid_62d59eb2a3e29b000aea1714" style="position:relative;width:100%;padding: 100% 0 0;"><img id="thumb_62d59eb2a3e29b000aea1714" src="https://images.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/62d59eb2a3e29b000aea1714/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62d59eb2a3e29b000aea1714" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62d59eb2a3e29b000aea1714">var s=document.createElement("script");s.src="https://scripts.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/62d59eb2a3e29b000aea1714/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_630221b6b1bfe5000abbd99b" style="position:relative;width:100%;padding: 55.00000000000001% 0 0;"><img id="thumb_630221b6b1bfe5000abbd99b" src="https://images.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/630221b6b1bfe5000abbd99b/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_630221b6b1bfe5000abbd99b" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_630221b6b1bfe5000abbd99b">var s=document.createElement("script");s.src="https://scripts.converteai.net/d653c69f-56dd-481a-abb5-ca00c47bf0da/players/630221b6b1bfe5000abbd99b/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
